syntax ="proto3";

package greet;

option java_multiple_files=true;
option java_package="com.proto.greet";

message Greeting{
    string first_name=1;
    string last_name=2;
}



message GreetRequest{
     Greeting greeting =1;
}

message GreetResponse{
    string result=1;
}



message GreetManyTimesRequest{
    Greeting greeting =1;
}

message GreetManyTimesResponse{
    string result=1;
}



message LongGreetingRequest{
    Greeting greeting =1;
}

message LongGreetingResponse{
    string result=1;
}


message GreetingEveryoneRequest{
    Greeting greeting =1;
}

message GreetingEveryoneResponse{
    string result=1;
}

service GreetService{

    //Unary API
    rpc Greet(GreetRequest) returns (GreetResponse){};

    //Server Streaming API
    rpc GreetManyTimes(GreetManyTimesRequest) returns (stream GreetManyTimesResponse){};

    //Client Streaming API
    rpc LongGreeting(stream LongGreetingRequest) returns (LongGreetingResponse){};

    //Bidirectional Streaming API
    rpc GreetingEveryone (stream GreetingEveryoneRequest) returns (stream GreetingEveryoneResponse){};


}